# jpu

./: MANIFEST.in  api.py  core.py  instructions.py  pyproject.toml  setup.py  start_shell.py
jpu/: api.py  core.py  instructions.py  memory.py  network.py  utils.py
jpu/runners/: python.py
tests/: test_core.py
