[tool.poetry]
name = "jpu"
version = "0.1.0"
description = ""
authors = ["mrjohnnyrocha <joaorocha619@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
